updated test project